--- a/search.html
+++ b/search.html
@@ -21,7 +21,7 @@ layout: search
 <div class="page clearfix" itemscope itemtype="http://schema.org/Blog" index>
     <div class="left">
         <div align="center">
-            <h1>Search In Frank Sun Blog</h1>
+            <h1>Search In Ray Sin Blog</h1>
             <small>找找有沒有你需要的東西</small>
         </div>
 
