google ads update

--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@ layout: default
                 </div>
             </div>
 
-           <!--  <div class="side">
+           <div class="side">
                 <div>
                     <i class=""></i>
                     Google AdSense
@@ -192,8 +192,8 @@ layout: default
                     <!-- Right Ad -->
                     <ins class="adsbygoogle"
                          style="display:inline-block;width:300px;height:600px;overflow:hidden;"
-                         data-ad-client="ca-pub-7446767830186218"
-                         data-ad-slot="4938028072"></ins>
+                         data-ad-client="ca-pub-7431302996495749"
+                         data-ad-slot="7431302996495749"></ins>
                     <script>
                     (adsbygoogle = window.adsbygoogle || []).push({});
                     </script>
