--- a/index.html
+++ b/index.html
@@ -187,17 +187,18 @@ layout: default
                     <i class=""></i>
                     Google AdSense
                 </div>
-                <ul style="text-align:center; overflow:hidden;" class="">
-                    <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+				<script data-ad-client="ca-pub-7431302996495749" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+                <!-- <ul style="text-align:center; overflow:hidden;" class=""> -->
+                    <!-- <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> -->
                     <!-- Right Ad -->
-                    <ins class="adsbygoogle"
-                         style="display:inline-block;width:300px;height:600px;overflow:hidden;"
-                         data-ad-client="ca-pub-7431302996495749"
-                         data-ad-slot="7431302996495749"></ins>
-                    <script>
-                    (adsbygoogle = window.adsbygoogle || []).push({});
-                    </script>
-                </ul>
+                    <!-- <ins class="adsbygoogle" -->
+                         <!-- style="display:inline-block;width:300px;height:600px;overflow:hidden;" -->
+                         <!-- data-ad-client="ca-pub-7431302996495749" -->
+                         <!-- data-ad-slot="7431302996495749"></ins> -->
+                    <!-- <script> -->
+                    <!-- (adsbygoogle = window.adsbygoogle || []).push({}); -->
+                    <!-- </script> -->
+                <!-- </ul> -->
             </div>
 
             <!-- <div class="side">
