--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-<div class="page clearfix" itemscope itemtype="http://schema.org/Blog" index>
+<div class="page clearfix" itemscope itemtype="https://schema.org/Blog" index>
     <div class="left">
         <div align="center">
             <h1>Welcome to Ray Sin Blog</h1>
