--- a/index.html
+++ b/index.html
@@ -204,15 +204,15 @@ layout: default
                 </ul>
             </div>
 
-            <!-- <div class="side">
+            <<div class="side">
                 <div>
                     <i class=""></i>
                     BloggerAds
                 </div>
                 <ul style="text-align:center; overflow:hidden;" class="">
-                    <script type="text/javascript" src="//js1.bloggerads.net/ShowAds.aspx?blogid=20170829000003" async></script>
+					<script type="text/javascript" src="//js1.bloggerads.net/ShowBanner.aspx?blogid=20200325000001" async></script>
                 </ul>
-            </div> -->
+            </div>
         </div>
     </div>
 </div>
