--- a/index.html
+++ b/index.html
@@ -210,8 +210,11 @@ layout: default
                     BloggerAds
                 </div>
                 <ul style="text-align:center; overflow:hidden;" class="">
-					<script type="text/javascript" src="//js1.bloggerads.net/ShowBanner.aspx?blogid=20200325000001" async></script>
+					<script type="text/javascript" src="//js1.bloggerads.net/ShowAds.aspx?blogid=20200325000001" async></script>
                 </ul>
+				<ul style="text-align:center; overflow:hidden;" class="">
+					<script type="text/javascript" src="//js1.bloggerads.net/Store/20200325000004/9" async></script>
+				</ul>
             </div>
         </div>
     </div>
