--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@ layout: default
 ---
 
 <div class="page clearfix" itemscope itemtype="https://schema.org/Blog" index>
-    <div class="left">
+    
+	<div class="left">
         <div align="center">
             <h1>Welcome to Ray Sin Blog</h1>
             <small>各種辛路歷程紀錄分享</small>
@@ -221,3 +222,12 @@ layout: default
 </div>
 <!-- <script src="{{ "/js/scroll.min.js " | prepend: site.baseurl }}" charset="utf-8"></script> -->
 <!-- <script src="{{ "/js/pageContent.js " | prepend: site.baseurl }}" charset="utf-8"></script> -->
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-169323394-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-169323394-1');
+</script>
