--- a/index.html
+++ b/index.html
@@ -188,10 +188,8 @@ layout: default
                     <i class=""></i>
                     Google AdSense
                 </div>
-<!-- 				<script 
-					data-ad-client="ca-pub-7431302996495749" 
-					async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js">
-				</script> -->
+					<script data-ad-client="ca-pub-7431302996495749" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js">
+					</script>
                 <ul style="text-align:center; overflow:hidden;" class="">
                     <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
                     <!-- Right Ad -->
