docs: remove side ads

--- a/index.html
+++ b/index.html
@@ -183,38 +183,38 @@ layout: default
                 </div>
             </div>
 
-           <div class="side">
-                <div>
-                    <i class=""></i>
-                    Google AdSense
-                </div>
-					<script data-ad-client="ca-pub-7431302996495749" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js">
-					</script>
-                <ul style="text-align:center; overflow:hidden;" class="">
-                    <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-                    <!-- Right Ad -->
-                    <ins class="adsbygoogle"
-                         style="display:inline-block;width:300px;height:600px;overflow:hidden;"
-                         data-ad-client="ca-pub-7431302996495749"
-                         data-ad-slot="7431302996495749"></ins>
-                    <script>
-                    (adsbygoogle = window.adsbygoogle || []).push({});
-                    </script>
-                </ul>
-            </div>
+<!--           <div class="side">-->
+<!--                <div>-->
+<!--                    <i class=""></i>-->
+<!--                    Google AdSense-->
+<!--                </div>-->
+<!--					<script data-ad-client="ca-pub-7431302996495749" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js">-->
+<!--					</script>-->
+<!--                <ul style="text-align:center; overflow:hidden;" class="">-->
+<!--                    <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>-->
+<!--                    &lt;!&ndash; Right Ad &ndash;&gt;-->
+<!--                    <ins class="adsbygoogle"-->
+<!--                         style="display:inline-block;width:300px;height:600px;overflow:hidden;"-->
+<!--                         data-ad-client="ca-pub-7431302996495749"-->
+<!--                         data-ad-slot="7431302996495749"></ins>-->
+<!--                    <script>-->
+<!--                    (adsbygoogle = window.adsbygoogle || []).push({});-->
+<!--                    </script>-->
+<!--                </ul>-->
+<!--            </div>-->
 
-            <<div class="side">
-                <div>
-                    <i class=""></i>
-                    BloggerAds
-                </div>
-                <ul style="text-align:center; overflow:hidden;" class="">
-					<script type="text/javascript" src="//js1.bloggerads.net/ShowAds.aspx?blogid=20200325000001" async></script>
-                </ul>
-				<ul style="text-align:center; overflow:hidden;" class="">
-					<script type="text/javascript" src="//js1.bloggerads.net/Store/20200325000004/9" async></script>
-				</ul>
-            </div>
+<!--            <div class="side">-->
+<!--                <div>-->
+<!--                    <i class=""></i>-->
+<!--                    BloggerAds-->
+<!--                </div>-->
+<!--                <ul style="text-align:center; overflow:hidden;" class="">-->
+<!--					<script type="text/javascript" src="//js1.bloggerads.net/ShowAds.aspx?blogid=20200325000001" async></script>-->
+<!--                </ul>-->
+<!--				<ul style="text-align:center; overflow:hidden;" class="">-->
+<!--					<script type="text/javascript" src="//js1.bloggerads.net/Store/20200325000004/9" async></script>-->
+<!--				</ul>-->
+<!--            </div>-->
         </div>
     </div>
 </div>
