fix(cms): adjust admin/_config.yml

--- a/admin/index.html
+++ b/admin/index.html
@@ -1,19 +1,27 @@
-<!-- admin/index.html -->
+---
+layout: null
+sitemap: false
+---
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
-    <!-- Favicon -->
-<link href="/assets/images/profile.jpeg" rel="shortcut icon" />
-<link href="/assets/images/profile.jpeg" rel="apple-touch-icon-precomposed" />
-<!-- Android Lolipop Theme Color -->
-<!-- <meta name="theme-color" content="#1464FB"> -->
-    <title>Ray's Blog - Admin</title>
-  </head>
-  <body>
-    <!-- Include the script that builds the page and powers Netlify CMS -->
-    <script src="https://unpkg.com/netlify-cms@^2.0.0/dist/netlify-cms.js"></script>
-  </body>
+<head>
+    <meta charset="utf-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <meta name="robots" content="noindex">
+    <title>Content Manager</title>
+
+    <link rel="stylesheet" href="https://unpkg.com/netlify-cms@^1.0/dist/cms.css"/>
+
+    <script src="https://identity-js.netlify.com/v1/netlify-identity-widget.js"></script>
+</head>
+<body>
+<script src="https://unpkg.com/netlify-cms@^1.0/dist/cms.js"></script>
+<div style="position: absolute; left: 40%; top: 15px; z-index: 300;">
+    <a href="javascript:history.back();" style="margin-left: 2em;">返回</a>
+    <a href="/" style="margin-left: 3em;">主頁</a>
+    <a href="{{site.github-repo}}" style="margin-left: 4em;" target="_blank">倉庫</a>
+    <a href="https://app.netlify.com/sites" style="margin-left: 2em;" target="_blank">Dashboard</a>
+    <a href="https://www.netlifycms.org/docs/intro/" style="margin-left: 2em;" target="_blank">Docs</a>
+</div>
+</body>
 </html>
